Cleanup and use javadoc from jdk-11.