@@ -9,14 +9,13 @@ buildscript {
 }
 
 plugins {
+    id "biz.aQute.bnd.workspace" version "6.1.0"
 	id "org.jdrupes.mdoclet" version "1.0.10"
     id 'org.ajoberstar.grgit' version '4.1.1-rc.4'
     id 'org.ajoberstar.git-publish' version '3.0.0'
 }
 
-apply plugin: 'biz.aQute.bnd.workspace'
-// Makes Eclipse-groovy handle *.gradle file properly
-apply plugin:'groovy'    
+// apply plugin: 'biz.aQute.bnd.workspace'
 
 ext {
 	isCiBuild = System.getenv().get("CI") == 'true'
@@ -42,9 +41,7 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
 	
-	apply plugin:'java'
-		
-    group = 'org.jgrapes'
+    apply from: "${project.rootDir}/gradle/eclipse.gradle"
 }
 
 /* Configure the subprojects */
@@ -53,40 +50,73 @@ subprojects {
 }
 
 configurations {
+    markdownDoclet
     javadocTaglets
 }
 
 dependencies {
-    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:1.0.+"
-    // javadocTaglets "com.github.mnlipp:jdrupes-taglets:master-SNAPSHOT"
+    markdownDoclet "org.jdrupes.mdoclet:doclet:2.0.0"
+    javadocTaglets "org.jdrupes.taglets:plantuml-taglet:2.0.0"
 }
 
-javadoc {
+task java11doc(type: JavaExec) {
     // Does not work on JitPack, no /usr/bin/dot
-    enabled = JavaVersion.current().isJava8() && !isJitPackBuild
-	
-	options.tagletPath = configurations.javadocTaglets.files as List
-	options.taglets = ["org.jdrupes.taglets.plantUml.Taglet"]
-	
-	classpath = files(subprojects.collect {project ->
-		project.sourceSets.main.compileClasspath})
-	source subprojects.collect {project -> project.sourceSets.main.allJava }
-	options.addStringOption("doctitle", "JGrapes OSGi Components")
-	options.addStringOption("overview", "overview.md")
-	inputs.file "overview.md"
-	options.addBooleanOption("use", true)
-	options.addBooleanOption("linksource", true)
-	options.stylesheetFile(file("stylesheet.css"))
-	options.addStringOption("bottom", file("misc/javadoc.bottom.txt").text)
-	options.links "https://docs.oracle.com/javase/8/docs/api/"
-	destinationDir = file("../jgrapes.gh-pages/javadoc-osgi")
+    enabled = !isJitPackBuild
+
+    // Make sure that other projects' compileClasspaths are resolved
+    rootProject.subprojects
+        .findAll({project -> project.name.startsWith("org.jgrapes")})
+        .each{project -> dependsOn project.tasks.assemble}
+    
+    inputs.file rootProject.file('overview.md')
+    
+    classpath = files(rootProject.subprojects
+        .findAll({project -> project.name.startsWith("org.jgrapes")})
+        .collect {project -> project.sourceSets.main.compileClasspath})
+    var sourceDirs = rootProject.subprojects
+        .findAll({project -> project.name.startsWith("org.jgrapes")
+                && !project.name.startsWith("org.jgrapes.osgi.demo")})
+        .collect{project -> project.sourceSets.main.allJava.getSrcDirs() }
+        .flatten().findAll(dir -> dir.exists())
+    sourceDirs.each { inputs.dir(it) }
+    
+    var destinationDir = file("../jgrapes.gh-pages/javadoc-osgi")
+    outputs.dir(destinationDir)
+    
+    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED']
+    main = 'jdk.javadoc.internal.tool.Main'
+    args = ['-doctitle', "JGrapes OSGi Components",
+        '-use',
+        '-linksource',
+        '-link', 'https://docs.oracle.com/en/java/javase/11/docs/api/',
+        '-link', 'https://mnlipp.github.io/jdrupes-httpcodec/javadoc/',
+        '-link', 'https://mnlipp.github.io/jgrapes/latest-release/javadoc/',
+        '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '-doclet', 'org.jdrupes.mdoclet.MDoclet',
+        '-docletpath', configurations.markdownDoclet.files.asType(List).join(":"),
+        '--disable-auto-highlight',
+        '-tagletpath', configurations.javadocTaglets.files.asType(List).join(":"),
+        '-taglet', 'org.jdrupes.taglets.plantUml.PlantUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.StartUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.EndUml',
+        '-overview', "${rootProject.file('overview.md')}",
+        '-d', destinationDir,
+        '-sourcepath', sourceDirs.join(':'),
+        '-subpackages', 'org.jgrapes',
+        '-bottom', rootProject.file("misc/javadoc.bottom.txt").text,
+        '--allow-script-in-comments',
+        '-Xdoclint:-html',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED'
+        ]
+    
+    ignoreExitValue true
 }
 
 gitPublish {
 	repoUri = 'https://github.com/mnlipp/jgrapes.git'
 	branch = 'gh-pages'
 	contents {
-		from(javadoc) {
+		from(java11doc) {
 			into 'javadoc-osgi'
 		}
 	}
@@ -95,13 +125,14 @@ gitPublish {
 }
 
 // Until https://github.com/ajoberstar/gradle-git-publish/issues/41 is fixed
-tasks.gitPublishCopy.dependsOn javadoc
+//tasks.gitPublishCopy.dependsOn javadoc
 
 task stage {
 	// Build everything first
-	subprojects.tasks.each { tc -> dependsOn tc.findByName("build") }
+	subprojects.tasks.findAll { tc -> tc.findByName("build") }
+	   .each { tc -> dependsOn tc.findByName("build") }
 	
-	if (!isCiBuild || JavaVersion.current().isJava8()) {
+	if (!isCiBuild || JavaVersion.current().isJava11()) {
     	// Publish JavaDoc
     	dependsOn gitPublishPush
     }	
